# SCON

./: .gitignore  HACKING  INSTALL  LICENSE  Makefile.am  NEWS  README.md  SCON_Build_Test_Recipe  VERSION  aclocal.m4  autogen.pl  configure.ac
src/: Makefile.am
src/.libs/: libscon.dylib  libscon.la  libscon.lai
src/buffer_ops/: buffer_ops.h  copy.c  internal.h  internal_functions.c  open_close.c  pack.c  print.c  types.h  unpack.c
src/buffer_ops/.deps/: copy.Plo  internal_functions.Plo  open_close.Plo  pack.Plo  print.Plo  unpack.Plo
src/class/: Makefile.include  scon_bitmap.c  scon_bitmap.h  scon_hash_table.c  scon_hash_table.h  scon_hotel.c  scon_hotel.h  scon_list.c  scon_list.h  scon_object.c  scon_object.h  scon_pointer_array.c  scon_pointer_array.h  scon_ring_buffer.c  scon_ring_buffer.h  scon_value_array.c  scon_value_array.h
src/class/.deps/: scon_hash_table.Plo  scon_hotel.Plo  scon_list.Plo  scon_object.Plo  scon_pointer_array.Plo  scon_ring_buffer.Plo  scon_value_array.Plo
src/include/: Makefile.include  align.h  frameworks.h  hash_string.h  pmix_socket_errno.h  pmix_stdint.h  prefetch.h  rename.h  scon_config.h  scon_config.h.in~  scon_config_bottom.h  scon_config_top.h  scon_globals.h  scon_socket_errno.h  scon_stdint.h  scon_types.h  stamp-h1  types.h
src/mca/: mca.h
src/mca/base/: Makefile.am  base.h  scon_mca_base_close.c  scon_mca_base_component_compare.c  scon_mca_base_component_find.c  scon_mca_base_component_repository.c  scon_mca_base_component_repository.h  scon_mca_base_components_close.c  scon_mca_base_components_open.c  scon_mca_base_components_register.c  scon_mca_base_components_select.c  scon_mca_base_framework.c  scon_mca_base_framework.h  scon_mca_base_list.c  scon_mca_base_open.c  scon_mca_base_parse_paramfile.c  scon_mca_base_var.c  scon_mca_base_var.h  scon_mca_base_var_enum.c  scon_mca_base_var_enum.h  scon_mca_base_var_group.c  scon_mca_base_var_group.h  scon_mca_base_vari.h
src/mca/base/.deps/: pmix_mca_base_close.Plo  pmix_mca_base_component_compare.Plo  pmix_mca_base_component_find.Plo  pmix_mca_base_component_repository.Plo  pmix_mca_base_components_close.Plo  pmix_mca_base_components_open.Plo  pmix_mca_base_components_register.Plo  pmix_mca_base_components_select.Plo  pmix_mca_base_framework.Plo  pmix_mca_base_list.Plo  pmix_mca_base_open.Plo  pmix_mca_base_parse_paramfile.Plo  pmix_mca_base_var.Plo  pmix_mca_base_var_enum.Plo  pmix_mca_base_var_group.Plo  scon_mca_base_close.Plo  scon_mca_base_component_compare.Plo  scon_mca_base_component_find.Plo  scon_mca_base_component_repository.Plo  scon_mca_base_components_close.Plo  scon_mca_base_components_open.Plo  scon_mca_base_components_register.Plo  scon_mca_base_components_select.Plo  scon_mca_base_framework.Plo  scon_mca_base_list.Plo  scon_mca_base_open.Plo  scon_mca_base_parse_paramfile.Plo  scon_mca_base_var.Plo  scon_mca_base_var_enum.Plo  scon_mca_base_var_group.Plo
src/mca/base/.libs/: libscon_mca_base.la
src/mca/collectives/: Makefile.am  collectives.h
src/mca/collectives/.libs/: libmca_scon_collectives.la
src/mca/collectives/base/: Makefile.am  base.h  collectives_base_component.c  collectives_base_select.c  collectives_base_stubs.c  static-components.h
src/mca/collectives/brucks/: Makefile.am  collectives_brucks.c  collectives_brucks.h  collectives_brucks_component.c  collectives_rcd.c
src/mca/collectives/default/: Makefile.am  collectives_default.c  collectives_default.h  collectives_default_component.c
src/mca/collectives/rcd/: Makefile.am  collectives_rcd.c  collectives_rcd.h  collectives_rcd_component.c
src/mca/comm/: Makefile.am  comm.h
src/mca/comm/base/: Makefile.am  base.h  comm_base_frame.c  comm_base_select.c  comm_base_stubs.c  comm_base_wireup.c  comm_base_wireup.h  help-scon-base.txt  owner.txt
src/mca/comm/native/: Makefile.am  comm_native.h  comm_native_component.c
src/mca/common/: Makefile.am  common.h  static-components.h
src/mca/common/.libs/: libscon_mca_common.la
src/mca/common/base/: Makefile.am  base.h  common_base_frame.c  common_base_select.c  common_base_stubs.c  static-components.h
src/mca/common/orte/: Makefile.am  common_orte.h  common_orte_component.c  scon_native.h  scon_native_collectives.c  scon_native_component.c  scon_native_ops.c  scon_native_send.c  scon_native_send_recv.c
src/mca/if/: Makefile.am  if.h
src/mca/if/base/: base.h  if_base_components.c
src/mca/if/bsdx_ipv4/: configure.m4  if_bsdx.c
src/mca/pdl/: Makefile  Makefile.am  Makefile.in  configure.m4  libmca_pdl.la  libmca_scon_pdl.la  libscon_mca_pdl.la  pdl.h
src/mca/pdl/base/: Makefile.am  (+10 more)
src/mca/pinstalldirs/: Makefile  Makefile.am  Makefile.in  configure.m4  libmca_scon_pinstalldirs.la  libscon_mca_pinstalldirs.la  pinstalldirs.h
src/mca/pt2pt/: Makefile.am  pt2pt.h
src/mca/sdl/: Makefile  Makefile.am  Makefile.in  configure.m4  sdl.h
src/mca/sinstalldirs/: Makefile  Makefile.am  Makefile.in  configure.m4  sinstalldirs.h
src/mca/topology/: Makefile.am  topology.h
src/runtime/: Makefile.include  help-scon-runtime.txt  scon.h  scon_init.c  scon_params.c  scon_progress_threads.c  scon_progress_threads.h  scon_rte.h  scon_types.h
src/test/: Makefile.in  Makefile.include  test_cfg.c  test_init  test_init.c  test_send_recv.c
src/util/: Makefile.include  argv.c  argv.h  basename.c  basename.h  bit_ops.h  crc.c  crc.h  error.c  error.h  fd.c  fd.h  getid.c  getid.h  hash.c  hash.h  if.c  if.h  keyval_parse.c  keyval_parse.h  name_fns.c  name_fns.h  net.c  net.h  os_path.c  os_path.h  output.c  output.h  parse_options.c  parse_options.h  path.c  path.h  printf.c  printf.h  scon_environ.c  scon_environ.h  scon_pmix.c  scon_pmix.h  show_help.c  show_help.h  (+7 more)
src/util/.deps/: argv.Plo  basename.Plo  crc.Plo  error.Plo  fd.Plo  keyval_parse.Plo  os_path.Plo  output.Plo  path.Plo  printf.Plo  scon_environ.Plo  show_help.Plo  show_help_lex.Plo  timings.Plo
src/util/keyval/: Makefile  Makefile.am  Makefile.in  keyval_lex.c  keyval_lex.h  keyval_lex.l
test/: Makefile.am  test_common.h  test_init.c  test_send_recv.c  test_xcast.c
(+205 files in other folders)
