#
# Copyright (c) 2006      Los Alamos National Security, LLC.  All rights
#                         reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_sinstalldirs_la_SOURCES += \
        base/sinstalldirs_base_components.c \
        base/sinstalldirs_base_expand.c
