#
# Copyright (c) 2016      Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

#dist_scondata_DATA += base/help-scon-base.txt

headers += \
	base/base.h

libmca_scon_collectives_la_SOURCES += \
        base/collectives_base_component.c\
        base/collectives_base_select.c
