#
# Copyright (c) 2016      Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

#dist_scondata_DATA += base/help-scon-base.txt

headers += \
	base/base.h\
        base/comm_base_wireup.h

libmca_comm_la_SOURCES += \
                base/comm_base_frame.c\
                base/comm_base_select.c\
		        base/comm_base_stubs.c\
		        base/comm_base_wireup.c
