#
# Copyright (c) 2016      Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

#dist_scondata_DATA += base/help-scon-base.txt

headers += \
	base/base.h

libscon_mca_common_la_SOURCES += \
        base/common_base_frame.c\
        base/common_base_select.c\
		base/common_base_stubs.c
