#
# Copyright (c) 2016      Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

#dist_scondata_DATA += base/help-scon-base.txt

headers += \
	base/base.h

libmca_pt2pt_la_SOURCES += \
        base/pt2pt_base_component.c\
        base/pt2pt_base_select.c \
		base/pt2pt_base_stubs.c\
		base/pt2pt_base_recv_msg_handlers.c\
		base/pt2pt_base_contact.c
