#
# Copyright (c) 2015 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2017 Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_sdl_la_SOURCES += \
        base/sdl_base_open.c \
        base/sdl_base_close.c \
        base/sdl_base_select.c \
        base/sdl_base_fns.c
